fixed contrast

--- a/src/style.css
+++ b/src/style.css
@@ -300,8 +300,9 @@ input[type='color']::-webkit-color-swatch {
 }
 
 #keys {
-	color: var(--text-color);
+	color: white;
 	font-size: 1rem;
+	text-shadow: 0px 0px 15px black;
 }
 
 #speedTitle {
